# Lexical-Tools

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .lua-format  .markdownlint.json  .pre-commit-config.yaml  .stylua.toml  LICENSE  NOTICE  README.md  README.mkdn  addon.json  addon.txt  build.py  info.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  shared.lua  spawnplatforms.fgd
addons/: base_lexentity.json  cami.json  crate.json  fading_doors.json  intemediary.json  keypads.json  lexical_tools.json  moneypot.json  npc_spawn_platforms.json  weapon_spawn_platforms.json  wirefixes.json
changelogs/: moneypot.mkdn  npc_spawn_platforms.mkdn
descriptions/en/: moneypot.bbcode  npc_spawn_platforms.bbcode  weapon_spawn_platforms.bbcode
examples/: weapon_special_cracker.lua  weapon_uber_cracker.lua
fgds/: spawnplatforms.fgd
icons/: keypads.pdn
lua/autorun/: fading_doors.lua  keypad.lua  keypad_gui.lua  npcspawner2.lua
lua/autorun/client/: lexical-tools.lua  lexical_tools.lua  npcspawner2_cl.lua  panel-npcselect.lua  panel-weaponselect.lua
lua/autorun/server/: fading_doors.lua  lexical_tools.lua  npcspawner2_sv.lua  (+1 more)
lua/entities/: base_lexentity.lua  base_moneypot.lua  cannon_prop.lua  canon_prop.lua  darkrp_moneypot.lua  gmod_commandbox.lua  gmod_crate.lua  gmod_propcannon.lua  sent_maybe_its_wire.lua  sent_weapons_store_simple.lua
lua/gui/: KeypadPasswordNag.lua  MinimumValueLabel.lua  NagLabel.lua  derma_cvars.lua
lua/weapons/: weapon_keypad_cracker.lua  weapon_keypad_tester.lua
readmes/: npc_spawn_platforms.mkdn
(+49 files in other folders)
